Closed
Bug 1837735
Opened 1 year ago
Closed 1 year ago
Firefox fails to open per-app Default Apps settings page for the first time if the app is not installed via the installer
Categories
(Firefox :: Shell Integration, defect)
Firefox
Shell Integration
Tracking
()
RESOLVED
FIXED
116 Branch
Tracking | Status | |
---|---|---|
firefox116 | --- | fixed |
People
(Reporter: emk, Assigned: emk)
References
Details
Attachments
(1 file)
Steps to reproduce:
- Make sure Firefox is neither registered for the user nor the machine. (For example, create a brand new Windows 11 VM.)
- Run Firefox from a zip build.
- Set
browser.shell.setDefaultBrowserUserChoice
pref to false. - Try to Set Firefox as Default from Firefox UI.
Actual result:
The top of Default Apps page will open.
Expected result:
Per-app default settings page should open.
Assignee | ||
Comment 1•1 year ago
|
||
This is not 100% reliable, but it seems to have enough time to run
helper.exe before Default Apps Settings page scans the registry.
And I don't think we should make LaunchHelper
synchromous just for
this unusual (zip build) case, especially when the fallback (top of
Default Apps) is good enough.
Updated•1 year ago
|
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Pushed by VYV03354@nifty.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/786a4404166d
Prefer to registeredAppUser to improve success rate. r=nalexander
Comment 3•1 year ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox116:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•