Bug 1837735 - Prefer to registeredAppUser to improve success rate. r=nalexander

This is not 100% reliable, but it seems to have enough time to run
helper.exe before Default Apps Settings page scans the registry.
And I don't think we should make `LaunchHelper` synchromous just for
this unusual (zip build) case, especially when the fallback (top of
Default Apps) is good enough.

Differential Revision: https://phabricator.services.mozilla.com/D180533